XXXX-XX Feature Update for Version Next (6.0.0)

--- a/about.html
+++ b/about.html
@@ -124,14 +124,14 @@
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12 sect-title">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
+                    <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
                         <h2 style="font-size: 36px">Summary</h2>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeIn" data-wow-delay="100ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-cake-candles"></i>
                         </div>
@@ -141,7 +141,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeIn" data-wow-delay="100ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-earth-asia"></i>
                         </div>
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeIn" data-wow-delay="100ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-circle-user"></i>
                         </div>
@@ -161,7 +161,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="700ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeIn" data-wow-delay="100ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-user-graduate"></i>
                         </div>
@@ -171,7 +171,7 @@
                 </div>
 
                 <div class="col-md-8 col-lg-8 box-indiv">
-                    <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
+                    <div class="about-me-summary text-center mb-80 wow fadeIn" data-wow-delay="100ms">
                         <div class="summ-icon">
                             <i class="fa-solid fa-user-graduate"></i>
                         </div>
@@ -189,20 +189,20 @@
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="0ms">
+                    <div class="section-heading text-center wow fadeIn" data-wow-delay="0ms">
                         <h2 style="font-size: 35px">Timelines & Milestones</h2>
                     </div>
                 </div>
 
                 <!-- Education -->
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
                         <h1 style="text-align: left; margin-bottom: -45px; font-size: 36px;"><u>Education</u></h2>
                     </div>
                 </div>
             </div>
 
-            <div class="timeline-horizontal wow fadeInUp" data-wow-delay="100ms">
+            <div class="timeline-horizontal wow fadeIn" data-wow-delay="100ms">
                 <div class="timeline-item ">
                     <h4 class="timeline-date-edu">2019 - 2022</h4>
                     <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Diploma in Information
@@ -230,14 +230,14 @@
             <!-- Awards & Achievements -->
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="300ms">
+                    <div class="section-heading text-center wow fadeIn" data-wow-delay="300ms">
                         <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;"><u>Awards
                                 & Achievements</u></h2>
                     </div>
                 </div>
             </div>
 
-            <div class="timeline-horizontal wow fadeInUp" data-wow-delay="300ms">
+            <div class="timeline-horizontal wow fadeIn" data-wow-delay="300ms">
                 <div class="timeline-item ">
                     <h4 class="timeline-date-aa">2023</h4>
                     <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">Singapore Armed Forces (SAF)
@@ -288,14 +288,14 @@
             <!-- Experiences -->
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="50ms">
+                    <div class="section-heading text-center wow fadeIn" data-wow-delay="50ms">
                         <h1 style="text-align: left; margin-bottom: -45px; margin-top: 3em; font-size: 30px;">
                             <u>Experiences</u></h2>
                     </div>
                 </div>
             </div>
 
-            <div class="timeline-horizontal wow fadeInUp" data-wow-delay="500ms">
+            <div class="timeline-horizontal wow fadeIn" data-wow-delay="500ms">
                 <div class="timeline-item ">
                     <h4 class="timeline-date-exp">Mar 2025 - Present</h4>
                     <h3 style="font-size: 16px; font-weight: bolder; margin-top: 15px;">National Trades Union Congress
@@ -354,13 +354,13 @@
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
                         <h2 style="font-size: 30px">Language Proficiency</h2>
                     </div>
                 </div>
             </div>
 
-            <div class="skill-ara wow fadeInUp" data-wow-delay="300ms">
+            <div class="skill-ara wow fadeIn" data-wow-delay="300ms">
                 <div class="skill">
                     <div class="single-skill">
                         <div class="progress-count">
@@ -389,13 +389,13 @@
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="500ms">
+                    <div class="section-heading text-center wow fadeIn" data-wow-delay="500ms">
                         <h2 style="font-size: 30px">Programming Languages</h2>
                     </div>
                 </div>
             </div>
 
-            <div class="skill-ara wow fadeInUp" data-wow-delay="700ms">
+            <div class="skill-ara wow fadeIn" data-wow-delay="700ms">
                 <div class="skill">
                     <div class="single-skill">
                         <div class="progress-count">
