--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                     <div class="breadcrumb-content text-center">
                         <img class="profile-pic wow fadeInUp" data-wow-delay="100ms" src="img/bg-img/about.png"
                             alt="profile-pic">
-                        <div class="profile-det wow fadeInUp" data-wow-delay="200ms">
-                            <h2 class="profile-name wow fadeInUp" data-wow-delay="400ms">Nurafian Zulkifli</h2>
-                            <h2 class="profile-desc wow fadeInUp" data-wow-delay="400ms">Passionate about UI/UX, and
+                        <div class="profile-det wow fadeIn" data-wow-delay="200ms">
+                            <h2 class="profile-name wow fadeIn" data-wow-delay="400ms">Nurafian Zulkifli</h2>
+                            <h2 class="profile-desc wow fadeIn" data-wow-delay="400ms">Passionate about UI/UX, and
                                 everything else Design
                             </h2>
                         </div>
@@ -123,14 +123,14 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
                         <h2>Featured Works</h2>
                     </div>
                 </div>
             </div>
             <div class="row pw-portfolio">
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="100ms"
                     data-year="2025">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/rBAx6Yy.png" alt>
@@ -142,7 +142,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeInUp" data-wow-delay="100ms"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeIn" data-wow-delay="300ms"
                     data-year="2024">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/tKQajl6.png" alt="tdc-v3">
@@ -154,7 +154,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="500ms"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeIn" data-wow-delay="500ms"
                     data-year="2022">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/mrtK74Z.png" alt="bus-rep">
@@ -166,7 +166,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeInUp"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mc mb-30 wow fadeIn"
                     data-wow-delay="700ms">
                     <div class="single-portfolio-content">
                         <img src="https://i.imgur.com/GrXbpDs.png" alt="bus-stop-pole">
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
+                <div class="col-12 text-center wow fadeIn" data-wow-delay="700ms">
                     <a href="./works-by-nrfz.html" class="btn pw-btn btn-2 mt-15">View All &nbsp;<i
                             class="fa-solid fa-arrow-right"></i></a>
                 </div>
@@ -192,14 +192,14 @@
         <div class="container container-xxl">
             <div class="row">
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms"
+                    <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms"
                         style="margin-bottom: 18px;">
                         <h2>Likes & Interests</h2>
                     </div>
                 </div>
 
                 <div class="col-12">
-                    <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
+                    <div class="section-heading text-center wow fadeIn" data-wow-delay="100ms">
                         <h1><a href="https://en.wikipedia.org/wiki/Jack_of_all_trades"
                                 style="font-size: 20px; color: #5f6051;">"Jack of all trades, master of
                                 none"</a></h2>
@@ -209,7 +209,7 @@
             <div class="row">
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="about-me-content text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+                    <div class="about-me-content text-center mb-80 wow fadeIn" data-wow-delay="100ms">
                         <div class="wsd-icon">
                             <i class="fa-solid fa-signs-post"></i>
                         </div>
@@ -219,7 +219,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="about-me-content text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+                    <div class="about-me-content text-center mb-80 wow fadeIn" data-wow-delay="300ms">
                         <div class="ui-icon">
                             <i class="fa-solid fa-pen-ruler"></i>
                         </div>
@@ -229,7 +229,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-4">
-                    <div class="about-me-content text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+                    <div class="about-me-content text-center mb-80 wow fadeIn" data-wow-delay="500ms">
                         <div class="ux-icon">
                             <i class="fa-regular fa-face-smile-beam"></i>
                         </div>
@@ -253,7 +253,7 @@
                 </div>
             </div>
 
-            <div class="skill-ara wow fadeInUp" data-wow-delay="100ms">
+            <div class="skill-ara wow fadeIn" data-wow-delay="100ms">
                 <div class="skill">
                     <div class="single-skill">
                         <div class="progress-count">
@@ -290,7 +290,7 @@
         </div>
 
         <div class="row">
-            <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
+            <div class="col-12 text-center wow fadeIn" data-wow-delay="700ms">
                 <a href="./about.html" class="btn pw-btn btn-2 mt-15">About Me &nbsp;<i
                         class="fa-solid fa-arrow-right"></i></a>
             </div>
