XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -38,11 +38,10 @@
 <body>
 
   <!-- Preloader Section -->
-  <div id="preloader">
+  <!-- <div id="preloader">
     <div class="loader"></div>
     <p id="preloader-text">Just a moment...</p>
-  </div>
-
+  </div> -->
   <div id="scroll-indicator-container">
     <div id="scroll-indicator"></div>
   </div>
@@ -513,7 +512,7 @@
 
   <script src="../js/default-assets/active.js"></script>
 
-  <script src="../js/preloader.js"></script>
+    <!--  <script src="../js/preloader.js"></script> -->
 
 </body>
 
