--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
 <body>
 
     <!-- Preloader Section -->
-    <div id="preloader">
+    <!-- <div id="preloader">
         <div class="loader"></div>
         <p id="preloader-text">Just a moment...</p>
-    </div>
+    </div> -->
 
     <header>
         <a href="./index.html"><img src="./img/core-img/logo.png" alt="logo" class="logo" /></a>
@@ -473,7 +473,7 @@
 
     <script src="js/default-assets/active.js"></script>
 
-    <script src="js/preloader.js"></script>
+    <!-- <script src="js/preloader.js"></script> -->
 
     <script> document.getElementById('age').textContent = calculateAge('2000-03-04') + ' years old'; </script>
 
