--- a/blog.html
+++ b/blog.html
@@ -36,11 +36,11 @@
 
 <body>
 
-    <!-- Preloader Section -->
-    <div id="preloader">
-        <div class="loader"></div>
-        <p id="preloader-text">Just a moment...</p>
-    </div>
+  <!-- Preloader Section -->
+  <!-- <div id="preloader">
+    <div class="loader"></div>
+    <p id="preloader-text">Just a moment...</p>
+  </div> -->
 
     <header>
         <a href="./index.html"><img src="./img/core-img/logo.png" alt="logo" class="logo" /></a>
@@ -240,7 +240,7 @@
 
     <script src="js/blogFunct.js"></script>
 
-    <script src="js/preloader.js"></script>
+    <!-- <script src="js/preloader.js"></script> -->
 
 </body>
 
