--- a/eicw/eicw-2.html
+++ b/eicw/eicw-2.html
@@ -37,11 +37,11 @@
 
 <body>
 
-    <!-- Preloader Section -->
-    <div id="preloader">
-        <div class="loader"></div>
-        <p id="preloader-text">Just a moment...</p>
-    </div>
+  <!-- Preloader Section -->
+  <!-- <div id="preloader">
+    <div class="loader"></div>
+    <p id="preloader-text">Just a moment...</p>
+  </div> -->
 
     <div id="scroll-indicator-container">
         <div id="scroll-indicator"></div>
@@ -1255,7 +1255,7 @@
 
     <script src="../js/default-assets/active.js"></script>
 
-    <script src="../js/preloader.js"></script>
+    <!-- <script src="../js/preloader.js"></script> -->
 
 </body>
 
