--- a/works-by-nrfz.html
+++ b/works-by-nrfz.html
@@ -41,10 +41,10 @@
 <body>
 
   <!-- Preloader Section -->
-  <div id="preloader">
+  <!-- <div id="preloader">
     <div class="loader"></div>
     <p id="preloader-text">Just a moment...</p>
-  </div>
+  </div> -->
 
 
   <header>
@@ -414,7 +414,7 @@
 
   <script src="js/copy-to-clipboard.js"></script>
 
-  <script src="js/preloader.js"></script>
+  <!-- <script src="js/preloader.js"></script> -->
 
 </body>
 
