--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -38,10 +38,10 @@
 <body>
 
   <!-- Preloader Section -->
-  <div id="preloader">
+  <!-- <div id="preloader">
     <div class="loader"></div>
     <p id="preloader-text">Just a moment...</p>
-  </div>
+  </div> -->
 
 
 
@@ -234,7 +234,7 @@
 
   <script src="../js/copy-to-clipboard.js"></script>
 
-  <script src="js/preloader.js"></script>
+  <!-- <script src="../js/preloader.js"></script> -->
 
   <!-- Script for Indiv Page - Modes -->
   <script>
