--- a/worksbynrfz/mrt-signage-rep-s1.html
+++ b/worksbynrfz/mrt-signage-rep-s1.html
@@ -38,11 +38,10 @@
 <body>
 
   <!-- Preloader Section -->
-  <div id="preloader">
+  <!-- <div id="preloader">
     <div class="loader"></div>
     <p id="preloader-text">Just a moment...</p>
-  </div>
-
+  </div> -->
 
 
   <header>
@@ -225,7 +224,7 @@
 
   <script src="../js/copy-to-clipboard.js"></script>
 
-  <script src="../js/preloader.js"></script>
+    <!--  <script src="../js/preloader.js"></script> -->
 
   <!-- Script for Indiv Page - Modes -->
   <script>
