XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content>
-       <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="description" content>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
@@ -38,8 +38,8 @@
 
 <body>
 
-  <!-- Preloader Section -->
-  <!-- <div id="preloader">
+    <!-- Preloader Section -->
+    <!-- <div id="preloader">
     <div class="loader"></div>
     <p id="preloader-text">Just a moment...</p>
   </div> -->
@@ -97,13 +97,13 @@
                         </div>
                     </div>
                     <!-- Collapsible Header -->
-                    <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
+                    <!-- <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
                         aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
                         <i class="fa-solid fa-chevron-down nav-chev"></i>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- Collapsible Content -->
-                <div id="portfolioFilter" class="collapse">
+                <!-- <div id="portfolioFilter" class="collapse">
                     <div class="portfolio-filter mt-3">
                         <a href="#">
                             <button class="btn active">Design System Introduction</button>
@@ -121,7 +121,7 @@
                             <button class="btn">Rethinking CCL6 Signages</button>
                         </a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -132,6 +132,17 @@
             <div class="container container-mobile">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
+                        <div class="wrapper">
+                            <div class="icon"><i id="left" class="fa-solid fa-angle-left"></i></div>
+                            <ul class="tabs-box">
+                                <li class="tab active">Design System Introduction</li>
+                                <li class="tab">Proposed Wayfinding Changes - Trains</li>
+                                <li class="tab">Proposed Wayfinding Changes - Buses</li>
+                                <li class="tab">Proposed UI/UX Changes</li>
+                                <li class="tab">Rethinking CCL6 Signages</li>
+                            </ul>
+                            <div class="icon"><i id="right" class="fa-solid fa-angle-right"></i></div>
+                        </div>
                         <div class="row justify-content-center">
 
                             <!-- Preface -->
@@ -357,6 +368,8 @@
         data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
+
+    <script src="../js/dstabs.js"></script>
 
     <script src="js/eicw-1.js"></script>
 
