--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content>
-    <meta charset="UTF-8">
+       <meta charset="UTF-8">
     <meta name="description" content>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
@@ -39,10 +39,10 @@
 <body>
 
     <!-- Preloader Section -->
-    <!-- <div id="preloader">
-    <div class="loader"></div>
-    <p id="preloader-text">Just a moment...</p>
-  </div> -->
+    <div id="preloader">
+        <div class="loader"></div>
+        <p id="preloader-text">Just a moment...</p>
+    </div>
 
     <div id="scroll-indicator-container">
         <div id="scroll-indicator"></div>
@@ -97,13 +97,13 @@
                         </div>
                     </div>
                     <!-- Collapsible Header -->
-                    <!-- <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
+                    <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
                         aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
                         <i class="fa-solid fa-chevron-down nav-chev"></i>
-                    </div> -->
+                    </div>
                 </div>
                 <!-- Collapsible Content -->
-                <!-- <div id="portfolioFilter" class="collapse">
+                <div id="portfolioFilter" class="collapse">
                     <div class="portfolio-filter mt-3">
                         <a href="#">
                             <button class="btn active">Design System Introduction</button>
@@ -121,7 +121,7 @@
                             <button class="btn">Rethinking CCL6 Signages</button>
                         </a>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
@@ -130,15 +130,6 @@
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
             <div class="container container-mobile">
-                <div class="wrapper">
-                    <ul class="tabs-box">
-                        <li class="tab active">Design System Introduction</li>
-                        <li class="tab">Proposed Wayfinding Changes - Trains</li>
-                        <li class="tab">Proposed Wayfinding Changes - Buses</li>
-                        <li class="tab">Proposed UI/UX Changes</li>
-                        <li class="tab">Rethinking CCL6 Signages</li>
-                    </ul>
-                </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="row justify-content-center">
@@ -367,8 +358,6 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="../js/dstabs.js"></script>
-
     <script src="js/eicw-1.js"></script>
 
     <script src="../js/jquery.min.js"></script>
@@ -381,7 +370,7 @@
 
     <script src="../js/default-assets/active.js"></script>
 
-    <!-- <script src="../js/preloader.js"></script> -->
+    <script src="../js/preloader.js"></script>
 
 </body>
 
