--- a/blog.html
+++ b/blog.html
@@ -37,10 +37,10 @@
 <body>
 
     <!-- Preloader Section -->
-    <div id="preloader">
+    <!-- <div id="preloader">
         <div class="loader"></div>
         <p id="preloader-text">Just a moment...</p>
-    </div>
+    </div> -->
 
     <header>
         <a href="./index.html"><img src="./img/core-img/logo.png" alt="logo" class="logo" /></a>
