--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -15,7 +15,7 @@
 
   <link rel="icon" href="../img/core-img/favicon.png">
 
-   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/style-breakpoints.css">
@@ -94,13 +94,13 @@
             </div>
           </div>
           <!-- Collapsible Header -->
-          <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
+          <!-- <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
             aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
             <i class="fa-solid fa-chevron-down nav-chev"></i>
-          </div>
+          </div> -->
         </div>
         <!-- Collapsible Content -->
-        <div id="portfolioFilter" class="collapse">
+        <!-- <div id="portfolioFilter" class="collapse">
           <div class="portfolio-filter mt-3">
             <a href="eicw.html">
               <button class="btn">Design System Introduction</button>
@@ -118,7 +118,7 @@
               <button class="btn active">Rethinking CCL6 Signages</button>
             </a>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -127,14 +127,28 @@
   <section class="about-me-summ clearfix" style="padding-bottom: 3px;">
     <div class="wbnrfz_details_body">
       <div class="container container-mobile">
+
+        <div class="wrapper">
+          <nav class="tabs">
+            <div class="selector"></div>
+            <a href="eicw.html#dsi">Design System Introduction</a>
+            <a href="eicw-2.html#pct">Proposed Changes - Trains</a>
+            <a href="eicw-3.html#pcb">Proposed Changes - Buses</a>
+            <a href="eicw-4.html#pcu">Proposed Changes - UI/UX</a>
+            <a href="#" class="active">Proposed Changes - CCL6</a>
+          </nav>
+        </div>
+
+
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
 
               <!-- CCL6 -->
-              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="pcc">
                 <div class="info justify-content-center">
-                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Rethinking CCL6 Signages</h2>
+                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Rethinking
+                    CCL6 Signages</h2>
                   <p style="text-align: left;">LTA recently held a Public Engagement on enhanced Circle Line Wayfinding
                     Designs. A few mockups were showcased and the public were allowed to choose options on their
                     preference in the upcoming CCL6's wayfinding design enhancements. </p>
@@ -934,6 +948,8 @@
 
   <script src="../js/jquery.min.js"></script>
 
+  <script src="../js/dstabs.js"></script>
+
   <script src="../js/popper.min.js"></script>
 
   <script src="../js/bootstrap.min.js"></script>
@@ -942,7 +958,7 @@
 
   <script src="../js/default-assets/active.js"></script>
 
-    <!--  <script src="../js/preloader.js"></script> -->
+  <!--  <script src="../js/preloader.js"></script> -->
 
 </body>
 
