--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content>
-       <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="description" content>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
@@ -39,10 +39,10 @@
 <body>
 
     <!-- Preloader Section -->
-    <div id="preloader">
+    <!-- <div id="preloader">
         <div class="loader"></div>
         <p id="preloader-text">Just a moment...</p>
-    </div>
+    </div> -->
 
     <div id="scroll-indicator-container">
         <div id="scroll-indicator"></div>
@@ -97,13 +97,13 @@
                         </div>
                     </div>
                     <!-- Collapsible Header -->
-                    <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
+                    <!-- <div class="collapsible-header" data-bs-toggle="collapse" data-bs-target="#portfolioFilter"
                         aria-controls="portfolioFilter" style="cursor: pointer;" title="Go To">
                         <i class="fa-solid fa-chevron-down nav-chev"></i>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- Collapsible Content -->
-                <div id="portfolioFilter" class="collapse">
+                <!-- <div id="portfolioFilter" class="collapse">
                     <div class="portfolio-filter mt-3">
                         <a href="#">
                             <button class="btn active">Design System Introduction</button>
@@ -121,99 +121,116 @@
                             <button class="btn">Rethinking CCL6 Signages</button>
                         </a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
+
 
     <!-- Section Content -->
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
             <div class="container container-mobile">
-                <div class="row justify-content-center">
-                    <div class="col-lg-12">
-                        <div class="row justify-content-center">
 
-                            <!-- Preface -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
-                                <div class="info justify-content-center">
-                                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">Design
-                                        System Introduction</h2>
-                                    <p style="text-align: left;">The new Wayfinding system was first launched on the
-                                        Thomson-East
-                                        Coast Line stations. It spots a new design
-                                        system, where the emphasis was mainly on iconographies, rather than pure texts.
-                                        I for one, am a
-                                        huge fan of this new design.
-                                        <br><br>I love icons and pictorials as compared to texts.
-                                        Of course, with every new implementations, there has got to be areas that can be
-                                        improved, and in
-                                        this microsite, I will be brainstorming on ideas on how to make the current
-                                        system better. Do take
-                                        note, these are just
-                                        ideas and concepts, and technicalities like Dimensions & Measurements will not
-                                        be taken into
-                                        account.
-                                        Overall Assets and Designs' credit go to the Land Transport Authority.
-                                        <br><br> The Colour Palettes provided here are matched to be identical to the
-                                        real-life
-                                        counterparts as
-                                        well.
-                                    </p>
+                <div class="wrapper">
+                    <nav class="tabs">
+                        <div class="selector"></div>
+                        <a href="#" class="active">Design System Introduction</a>
+                        <a href="eicw-2.html#pct" data-body="">Proposed Changes - Trains</a>
+                        <a href="eicw-3.html#pcb">Proposed Changes - Buses</a>
+                        <a href="eicw-4.html#pcu">Proposed Changes - UI/UX</a>
+                        <a href="eicw-5.html#pcc">Proposed Changes - CCL6</a>
+                    </nav>
+                </div>
+
+                    <div class="row justify-content-center">
+                        <div class="col-lg-12">
+                            <div class="row justify-content-center">
+
+                                <!-- Preface -->
+                                <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="dsi">
+                                    <div class="info justify-content-center">
+                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">Design
+                                            System Introduction</h2>
+                                        <p style="text-align: left;">The new Wayfinding system was first launched on the
+                                            Thomson-East
+                                            Coast Line stations. It spots a new design
+                                            system, where the emphasis was mainly on iconographies, rather than pure
+                                            texts.
+                                            I for one, am a
+                                            huge fan of this new design.
+                                            <br><br>I love icons and pictorials as compared to texts.
+                                            Of course, with every new implementations, there has got to be areas that
+                                            can be
+                                            improved, and in
+                                            this microsite, I will be brainstorming on ideas on how to make the current
+                                            system better. Do take
+                                            note, these are just
+                                            ideas and concepts, and technicalities like Dimensions & Measurements will
+                                            not
+                                            be taken into
+                                            account.
+                                            Overall Assets and Designs' credit go to the Land Transport Authority.
+                                            <br><br> The Colour Palettes provided here are matched to be identical to
+                                            the
+                                            real-life
+                                            counterparts as
+                                            well.
+                                        </p>
+                                    </div>
+
+                                    <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp"
+                                        data-wow-delay="100ms" style="padding-top: 1em;">
+                                        <a href="#typeface">
+                                            <button class="btn">Font Typeface</button>
+                                        </a>
+                                        <a href="#colour">
+                                            <button class="btn">Colour Palettes</button>
+                                        </a>
+                                        <a href="#eia-img">
+                                            <button class="btn">Existing Icon Assets</button>
+                                        </a>
+                                    </div>
+                                    <hr>
                                 </div>
 
-                                <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp"
-                                    data-wow-delay="100ms" style="padding-top: 1em;">
-                                    <a href="#typeface">
-                                        <button class="btn">Font Typeface</button>
-                                    </a>
-                                    <a href="#colour">
-                                        <button class="btn">Colour Palettes</button>
-                                    </a>
-                                    <a href="#eia-img">
-                                        <button class="btn">Existing Icon Assets</button>
-                                    </a>
+                                <!-- Font Typeface -->
+                                <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="typeface">
+                                    <h2 class="mb-3"
+                                        style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                                        Font
+                                        Typeface</h2>
+                                    <div class="banner-eicw">
+                                        <a href="img/typeface-light.png" id="tf" class="portfolio-img">
+                                            <img src="img/typeface-light.png" id="tf-img" class="img-fluid" alt="tf">
+                                        </a>
+                                    </div>
+                                    <hr>
                                 </div>
-                                <hr>
+
+                                <!-- Colour Palettes -->
+                                <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="colour">
+                                    <h2 class="mb-3"
+                                        style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                                        Colour
+                                        Palettes</h2>
+                                    <div class="banner-eicw">
+                                        <a href="img/palettes-light.png" id="pl" class="portfolio-img">
+                                            <img src="img/palettes-light.png" id="pl-img" class="img-fluid" alt="pl">
+                                        </a>
+                                    </div>
+                                    <div class="banner-eicw">
+                                        <a href="img/palettes-light2.png" id="pl2" class="portfolio-img">
+                                            <img src="img/palettes-light2.png" id="pl2-img" class="img-fluid" alt="pl2">
+                                        </a>
+                                    </div>
+                                </div>
+
                             </div>
-
-                            <!-- Font Typeface -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="typeface">
-                                <h2 class="mb-3"
-                                    style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
-                                    Font
-                                    Typeface</h2>
-                                <div class="banner-eicw">
-                                    <a href="img/typeface-light.png" id="tf" class="portfolio-img">
-                                        <img src="img/typeface-light.png" id="tf-img" class="img-fluid" alt="tf">
-                                    </a>
-                                </div>
-                                <hr>
-                            </div>
-
-                            <!-- Colour Palettes -->
-                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="colour">
-                                <h2 class="mb-3"
-                                    style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
-                                    Colour
-                                    Palettes</h2>
-                                <div class="banner-eicw">
-                                    <a href="img/palettes-light.png" id="pl" class="portfolio-img">
-                                        <img src="img/palettes-light.png" id="pl-img" class="img-fluid" alt="pl">
-                                    </a>
-                                </div>
-                                <div class="banner-eicw">
-                                    <a href="img/palettes-light2.png" id="pl2" class="portfolio-img">
-                                        <img src="img/palettes-light2.png" id="pl2-img" class="img-fluid" alt="pl2">
-                                    </a>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 
 
@@ -358,9 +375,12 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
+
     <script src="js/eicw-1.js"></script>
 
     <script src="../js/jquery.min.js"></script>
+
+    <script src="../js/dstabs.js"></script>
 
     <script src="../js/popper.min.js"></script>
 
@@ -370,7 +390,7 @@
 
     <script src="../js/default-assets/active.js"></script>
 
-    <script src="../js/preloader.js"></script>
+    <!-- <script src="../js/preloader.js"></script> -->
 
 </body>
 
