XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -131,11 +131,11 @@
         <div class="wrapper">
           <nav class="tabs">
             <div class="selector"></div>
-            <a href="eicw.html#dsi">Design System Introduction</a>
-            <a href="eicw-2.html#pct">Proposed Changes - Trains</a>
-            <a href="#" class="active">Proposed Changes - Buses</a>
-            <a href="eicw-4.html#pcu">Proposed Changes - UI/UX</a>
-            <a href="eicw-5.html#pcc">Proposed Changes - CCL6</a>
+            <a href="eicw.html#dsi" class="normal">Design System Introduction</a>
+            <a href="eicw-2.html#pct" class="normal">Proposed Wayfinding Changes - Trains</a>
+            <a href="#" class="active">Proposed Wayfinding Changes - Buses</a>
+            <a href="eicw-4.html#pcu" class="normal">Proposed UI/UX Changes</a>
+            <a href="eicw-5.html#pcc" class="normal">Rethinking CCL6 Signages</a>
           </nav>
         </div>
 
