--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -136,10 +136,10 @@
                     <nav class="tabs">
                         <div class="selector"></div>
                         <a href="#" class="active">Design System Introduction</a>
-                        <a href="eicw-2.html#pct" data-body="">Proposed Changes - Trains</a>
-                        <a href="eicw-3.html#pcb">Proposed Changes - Buses</a>
-                        <a href="eicw-4.html#pcu">Proposed Changes - UI/UX</a>
-                        <a href="eicw-5.html#pcc">Proposed Changes - CCL6</a>
+                        <a href="eicw-2.html#pct" class="normal">Proposed Wayfinding Changes - Trains</a>
+                        <a href="eicw-3.html#pcb" class="normal">Proposed Wayfinding Changes - Buses</a>
+                        <a href="eicw-4.html#pcu" class="normal">Proposed UI/UX Changes</a>
+                        <a href="eicw-5.html#pcc" class="normal">Rethinking CCL6 Signages</a>
                     </nav>
                 </div>
 
