--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -16,6 +16,7 @@
   <link rel="icon" href="../img/core-img/favicon.png">
 
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+  <link rel='stylesheet' href='https://unpkg.com/swiper@6.8.1/swiper-bundle.min.css'>
 
   <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="../css/style-breakpoints.css">
@@ -128,16 +129,45 @@
     <div class="wbnrfz_details_body">
       <div class="container container-mobile">
 
-        <div class="wrapper">
-          <nav class="tabs">
-            <div class="selector"></div>
-            <a href="eicw.html#dsi" class="normal">Design System Introduction</a>
-            <a href="eicw-2.html#pct" class="normal">Proposed Wayfinding Changes - Trains</a>
-            <a href="eicw-3.html#pcb" class="normal">Proposed Wayfinding Changes - Buses</a>
-            <a href="#" class="active">Proposed UI/UX Changes</a>
-            <a href="eicw-5.html#pcc" class="normal">Rethinking CCL6 Signages</a>
-          </nav>
-        </div>
+                <div class="container container-slider">
+                    <div class="row justify-content-center">
+                        <div class="col-md-12">
+                            <div class="category-lists-slider">
+                                <div class="swiper-container" id="catgory-slider">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <a href="eicw.html#dsi" class="category-button">
+                                                Design System Introduction
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a href="eicw-2.html#pct" class="category-button">
+                                                Proposed Wayfinding Changes - Trains
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a href="eicw-3.html#pcb" class="category-button">
+                                                Proposed Wayfinding Changes - Buses
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a href="#" class="category-button active">
+                                                Proposed UI/UX Changes
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a href="eicw-5.html#pcc" class="category-button">
+                                                Rethinking CCL6 Signages
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="slider-button slider-prev"><i class="fa fa-chevron-left"></i></div>
+                                <div class="slider-button slider-next"><i class="fa fa-chevron-right"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
         <div class="row justify-content-center">
@@ -147,7 +177,7 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="pcu">
                 <div class="info justify-content-center">
-                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Proposed UI/UX
+                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Proposed UI/UX
                     Changes</h2>
                   <p style="text-align: left;">In aligning with the current Wayfinding System, I have incorporated the
                     elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
@@ -412,6 +442,8 @@
   <script src="js/eicw-4.js"></script>
 
   <script src="../js/jquery.min.js"></script>
+
+  <script src='https://unpkg.com/swiper@6.8.1/swiper-bundle.min.js'></script>
 
   <script src="../js/dstabs.js"></script>
 
