--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -17,6 +17,7 @@
     <link rel="icon" href="../img/core-img/favicon.png">
 
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+    <link rel='stylesheet' href='https://unpkg.com/swiper@6.8.1/swiper-bundle.min.css'>
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/style-breakpoints.css">
@@ -132,105 +133,134 @@
         <div class="wbnrfz_eicw">
             <div class="container container-mobile">
 
-                <div class="wrapper">
-                    <nav class="tabs">
-                        <div class="selector"></div>
-                        <a href="#" class="active">Design System Introduction</a>
-                        <a href="eicw-2.html#pct" class="normal">Proposed Wayfinding Changes - Trains</a>
-                        <a href="eicw-3.html#pcb" class="normal">Proposed Wayfinding Changes - Buses</a>
-                        <a href="eicw-4.html#pcu" class="normal">Proposed UI/UX Changes</a>
-                        <a href="eicw-5.html#pcc" class="normal">Rethinking CCL6 Signages</a>
-                    </nav>
-                </div>
-
+                <div class="container container-slider">
                     <div class="row justify-content-center">
-                        <div class="col-lg-12">
-                            <div class="row justify-content-center">
-
-                                <!-- Preface -->
-                                <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="dsi">
-                                    <div class="info justify-content-center">
-                                        <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">Design
-                                            System Introduction</h2>
-                                        <p style="text-align: left;">The new Wayfinding system was first launched on the
-                                            Thomson-East
-                                            Coast Line stations. It spots a new design
-                                            system, where the emphasis was mainly on iconographies, rather than pure
-                                            texts.
-                                            I for one, am a
-                                            huge fan of this new design.
-                                            <br><br>I love icons and pictorials as compared to texts.
-                                            Of course, with every new implementations, there has got to be areas that
-                                            can be
-                                            improved, and in
-                                            this microsite, I will be brainstorming on ideas on how to make the current
-                                            system better. Do take
-                                            note, these are just
-                                            ideas and concepts, and technicalities like Dimensions & Measurements will
-                                            not
-                                            be taken into
-                                            account.
-                                            Overall Assets and Designs' credit go to the Land Transport Authority.
-                                            <br><br> The Colour Palettes provided here are matched to be identical to
-                                            the
-                                            real-life
-                                            counterparts as
-                                            well.
-                                        </p>
-                                    </div>
-
-                                    <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp"
-                                        data-wow-delay="100ms" style="padding-top: 1em;">
-                                        <a href="#typeface">
-                                            <button class="btn">Font Typeface</button>
-                                        </a>
-                                        <a href="#colour">
-                                            <button class="btn">Colour Palettes</button>
-                                        </a>
-                                        <a href="#eia-img">
-                                            <button class="btn">Existing Icon Assets</button>
-                                        </a>
-                                    </div>
-                                    <hr>
-                                </div>
-
-                                <!-- Font Typeface -->
-                                <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="typeface">
-                                    <h2 class="mb-3"
-                                        style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
-                                        Font
-                                        Typeface</h2>
-                                    <div class="banner-eicw">
-                                        <a href="img/typeface-light.png" id="tf" class="portfolio-img">
-                                            <img src="img/typeface-light.png" id="tf-img" class="img-fluid" alt="tf">
-                                        </a>
-                                    </div>
-                                    <hr>
-                                </div>
-
-                                <!-- Colour Palettes -->
-                                <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="colour">
-                                    <h2 class="mb-3"
-                                        style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
-                                        Colour
-                                        Palettes</h2>
-                                    <div class="banner-eicw">
-                                        <a href="img/palettes-light.png" id="pl" class="portfolio-img">
-                                            <img src="img/palettes-light.png" id="pl-img" class="img-fluid" alt="pl">
-                                        </a>
-                                    </div>
-                                    <div class="banner-eicw">
-                                        <a href="img/palettes-light2.png" id="pl2" class="portfolio-img">
-                                            <img src="img/palettes-light2.png" id="pl2-img" class="img-fluid" alt="pl2">
-                                        </a>
+                        <div class="col-md-12">
+                            <div class="category-lists-slider">
+                                <div class="swiper-container" id="catgory-slider">
+                                    <div class="swiper-wrapper">
+                                        <div class="swiper-slide">
+                                            <a href="#" class="category-button active" data-id="dsi">
+                                                Design System Introduction
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a href="eicw-2.html#pct" class="category-button" data-id="data2">
+                                                Proposed Wayfinding Changes - Trains
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a href="eicw-3.html#pcb" class="category-button" data-id="data3">
+                                                Proposed Wayfinding Changes - Buses
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a href="eicw-4.html#pcu" class="category-button" data-id="data5">
+                                                Proposed UI/UX Changes
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a href="eicw-5.html#pcc" class="category-button" data-id="data6">
+                                                Rethinking CCL6 Signages
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
-
+                                <div class="slider-button slider-prev"><i class="fa fa-chevron-left"></i></div>
+                                <div class="slider-button slider-next"><i class="fa fa-chevron-right"></i></div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="row justify-content-center">
+                    <div class="col-lg-12">
+                        <div class="row justify-content-center">
+
+                            <!-- Preface -->
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="dsi">
+                                <div class="info justify-content-center">
+                                    <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold;">Design
+                                        System Introduction</h2>
+                                    <p style="text-align: left;">The new Wayfinding system was first launched on the
+                                        Thomson-East
+                                        Coast Line stations. It spots a new design
+                                        system, where the emphasis was mainly on iconographies, rather than pure
+                                        texts.
+                                        I for one, am a
+                                        huge fan of this new design.
+                                        <br><br>I love icons and pictorials as compared to texts.
+                                        Of course, with every new implementations, there has got to be areas that
+                                        can be
+                                        improved, and in
+                                        this microsite, I will be brainstorming on ideas on how to make the current
+                                        system better. Do take
+                                        note, these are just
+                                        ideas and concepts, and technicalities like Dimensions & Measurements will
+                                        not
+                                        be taken into
+                                        account.
+                                        Overall Assets and Designs' credit go to the Land Transport Authority.
+                                        <br><br> The Colour Palettes provided here are matched to be identical to
+                                        the
+                                        real-life
+                                        counterparts as
+                                        well.
+                                    </p>
+                                </div>
+
+                                <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp"
+                                    data-wow-delay="100ms" style="padding-top: 1em;">
+                                    <a href="#typeface">
+                                        <button class="btn">Font Typeface</button>
+                                    </a>
+                                    <a href="#colour">
+                                        <button class="btn">Colour Palettes</button>
+                                    </a>
+                                    <a href="#eia-img">
+                                        <button class="btn">Existing Icon Assets</button>
+                                    </a>
+                                </div>
+                                <hr>
+                            </div>
+
+                            <!-- Font Typeface -->
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="typeface">
+                                <h2 class="mb-3"
+                                    style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                                    Font
+                                    Typeface</h2>
+                                <div class="banner-eicw">
+                                    <a href="img/typeface-light.png" id="tf" class="portfolio-img">
+                                        <img src="img/typeface-light.png" id="tf-img" class="img-fluid" alt="tf">
+                                    </a>
+                                </div>
+                                <hr>
+                            </div>
+
+                            <!-- Colour Palettes -->
+                            <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="colour">
+                                <h2 class="mb-3"
+                                    style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 10px;">
+                                    Colour
+                                    Palettes</h2>
+                                <div class="banner-eicw">
+                                    <a href="img/palettes-light.png" id="pl" class="portfolio-img">
+                                        <img src="img/palettes-light.png" id="pl-img" class="img-fluid" alt="pl">
+                                    </a>
+                                </div>
+                                <div class="banner-eicw">
+                                    <a href="img/palettes-light2.png" id="pl2" class="portfolio-img">
+                                        <img src="img/palettes-light2.png" id="pl2-img" class="img-fluid" alt="pl2">
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
     </section>
 
 
@@ -379,6 +409,8 @@
     <script src="js/eicw-1.js"></script>
 
     <script src="../js/jquery.min.js"></script>
+
+    <script src='https://unpkg.com/swiper@6.8.1/swiper-bundle.min.js'></script>
 
     <script src="../js/dstabs.js"></script>
 
