XXXX-XX Feature Update for Version Next (6.0.0)

--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -90,7 +90,7 @@
                     </li>
                   </ol>
                 </nav>
-                <h1 class="brc">Experimenting Improvements of Current Wayfinding</h1>
+                <h1 class="brc">Rethinking CCL6 Signages</h1>
               </div>
             </div>
           </div>
@@ -101,57 +101,29 @@
           </div> -->
         </div>
         <!-- Collapsible Content -->
-        <!-- <div id="portfolioFilter" class="collapse">
-          <div class="portfolio-filter mt-3">
-            <a href="eicw.html">
-              <button class="btn">Design System Introduction</button>
-            </a>
-            <a href="eicw-2.html">
-              <button class="btn">Proposed Wayfinding Changes - Trains</button>
-            </a>
-            <a href="eicw-3.html">
-              <button class="btn">Proposed Wayfinding Changes - Buses</button>
-            </a>
-            <a href="eicw-4.html">
-              <button class="btn">Proposed UI/UX Changes</button>
-            </a>
-            <a href="#">
-              <button class="btn active">Rethinking CCL6 Signages</button>
-            </a>
-          </div>
-        </div> -->
-      </div>
-    </div>
-  </section>
-
-  <!-- Section Content -->
-  <section class="about-me-sum clearfix">
-    <div class="wbnrfz_eicw">
-      <div class="container container-mobile">
-
         <div class="container container-slider">
           <div class="row justify-content-center">
             <div class="col-md-12">
               <div class="category-lists-slider">
-                <div class="swiper-container" id="catgory-slider">
+                <div class="swiper-container" id="swiper-cat-slider">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <a href="eicw.html#dsi" class="category-button">
+                      <a href="eicw.html" class="category-button">
                         Design System Introduction
                       </a>
                     </div>
                     <div class="swiper-slide">
-                      <a href="eicw-2.html#pct" class="category-button">
+                      <a href="eicw-2.html" class="category-button">
                         Proposed Wayfinding Changes - Trains
                       </a>
                     </div>
                     <div class="swiper-slide">
-                      <a href="eicw-3.html#pcb" class="category-button">
+                      <a href="eicw-3.html" class="category-button">
                         Proposed Wayfinding Changes - Buses
                       </a>
                     </div>
                     <div class="swiper-slide">
-                      <a href="eicw-4.html#pcu" class="category-button">
+                      <a href="eicw-4.html" class="category-button">
                         Proposed UI/UX Changes
                       </a>
                     </div>
@@ -168,7 +140,14 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Section Content -->
+  <section class="about-me-sum clearfix">
+    <div class="wbnrfz_eicw">
+      <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
