--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -90,7 +90,7 @@
                     </li>
                   </ol>
                 </nav>
-                <h1 class="brc">Experimenting Improvements of Current Wayfinding</h1>
+                <h1 class="brc">Proposed UI/UX Changes</h1>
               </div>
             </div>
           </div>
@@ -101,25 +101,45 @@
           </div> -->
         </div>
         <!-- Collapsible Content -->
-        <!-- <div id="portfolioFilter" class="collapse">
-          <div class="portfolio-filter mt-3">
-            <a href="eicw.html">
-              <button class="btn">Design System Introduction</button>
-            </a>
-            <a href="eicw-2.html">
-              <button class="btn">Proposed Wayfinding Changes - Trains</button>
-            </a>
-            <a href="eicw-3.html">
-              <button class="btn">Proposed Wayfinding Changes - Buses</button>
-            </a>
-            <a href="eicw-4.html">
-              <button class="btn active">Proposed UI/UX Changes</button>
-            </a>
-            <a href="eicw-5.html">
-              <button class="btn">Rethinking CCL6 Signages</button>
-            </a>
+        <div class="container container-slider">
+          <div class="row justify-content-center">
+            <div class="col-md-12">
+              <div class="category-lists-slider">
+                <div class="swiper-container" id="swiper-cat-slider">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <a href="eicw.html" class="category-button">
+                        Design System Introduction
+                      </a>
+                    </div>
+                    <div class="swiper-slide">
+                      <a href="eicw-2.html" class="category-button">
+                        Proposed Wayfinding Changes - Trains
+                      </a>
+                    </div>
+                    <div class="swiper-slide">
+                      <a href="eicw-3.html" class="category-button">
+                        Proposed Wayfinding Changes - Buses
+                      </a>
+                    </div>
+                    <div class="swiper-slide">
+                      <a href="#" class="category-button active">
+                        Proposed UI/UX Changes
+                      </a>
+                    </div>
+                    <div class="swiper-slide">
+                      <a href="eicw-5.html" class="category-button">
+                        Rethinking CCL6 Signages
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-button slider-prev"><i class="fa fa-chevron-left"></i></div>
+                <div class="slider-button slider-next"><i class="fa fa-chevron-right"></i></div>
+              </div>
+            </div>
           </div>
-        </div> -->
+        </div>
       </div>
     </div>
   </section>
@@ -128,48 +148,6 @@
   <section class="about-me-summ clearfix">
     <div class="wbnrfz_details_body">
       <div class="container container-mobile">
-
-                <div class="container container-slider">
-                    <div class="row justify-content-center">
-                        <div class="col-md-12">
-                            <div class="category-lists-slider">
-                                <div class="swiper-container" id="catgory-slider">
-                                    <div class="swiper-wrapper">
-                                        <div class="swiper-slide">
-                                            <a href="eicw.html#dsi" class="category-button">
-                                                Design System Introduction
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="eicw-2.html#pct" class="category-button">
-                                                Proposed Wayfinding Changes - Trains
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="eicw-3.html#pcb" class="category-button">
-                                                Proposed Wayfinding Changes - Buses
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="#" class="category-button active">
-                                                Proposed UI/UX Changes
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="eicw-5.html#pcc" class="category-button">
-                                                Rethinking CCL6 Signages
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="slider-button slider-prev"><i class="fa fa-chevron-left"></i></div>
-                                <div class="slider-button slider-next"><i class="fa fa-chevron-right"></i></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
         <div class="row justify-content-center">
           <div class="col-lg-12">
             <div class="row justify-content-center">
@@ -177,7 +155,8 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="pcu">
                 <div class="info justify-content-center">
-                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Proposed UI/UX
+                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Proposed
+                    UI/UX
                     Changes</h2>
                   <p style="text-align: left;">In aligning with the current Wayfinding System, I have incorporated the
                     elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
