--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -104,40 +104,11 @@
                     </div> -->
                 </div>
                 <!-- Collapsible Content -->
-                <!-- <div id="portfolioFilter" class="collapse">
-                    <div class="portfolio-filter mt-3">
-                        <a href="#">
-                            <button class="btn active">Design System Introduction</button>
-                        </a>
-                        <a href="eicw-2.html">
-                            <button class="btn">Proposed Wayfinding Changes - Trains</button>
-                        </a>
-                        <a href="eicw-3.html">
-                            <button class="btn">Proposed Wayfinding Changes - Buses</button>
-                        </a>
-                        <a href="eicw-4.html">
-                            <button class="btn">Proposed UI/UX Changes</button>
-                        </a>
-                        <a href="eicw-5.html">
-                            <button class="btn">Rethinking CCL6 Signages</button>
-                        </a>
-                    </div>
-                </div> -->
-            </div>
-        </div>
-    </section>
-
-
-    <!-- Section Content -->
-    <section class="about-me-sum clearfix">
-        <div class="wbnrfz_eicw">
-            <div class="container container-mobile">
-
                 <div class="container container-slider">
                     <div class="row justify-content-center">
                         <div class="col-md-12">
                             <div class="category-lists-slider">
-                                <div class="swiper-container" id="catgory-slider">
+                                <div class="swiper-container" id="swiper-cat-slider">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <a href="#" class="category-button active" data-id="dsi">
@@ -145,22 +116,22 @@
                                             </a>
                                         </div>
                                         <div class="swiper-slide">
-                                            <a href="eicw-2.html#pct" class="category-button" data-id="data2">
+                                            <a href="eicw-2.html" class="category-button" data-id="data2">
                                                 Proposed Wayfinding Changes - Trains
                                             </a>
                                         </div>
                                         <div class="swiper-slide">
-                                            <a href="eicw-3.html#pcb" class="category-button" data-id="data3">
+                                            <a href="eicw-3.html" class="category-button" data-id="data3">
                                                 Proposed Wayfinding Changes - Buses
                                             </a>
                                         </div>
                                         <div class="swiper-slide">
-                                            <a href="eicw-4.html#pcu" class="category-button" data-id="data5">
+                                            <a href="eicw-4.html" class="category-button" data-id="data5">
                                                 Proposed UI/UX Changes
                                             </a>
                                         </div>
                                         <div class="swiper-slide">
-                                            <a href="eicw-5.html#pcc" class="category-button" data-id="data6">
+                                            <a href="eicw-5.html" class="category-button" data-id="data6">
                                                 Rethinking CCL6 Signages
                                             </a>
                                         </div>
@@ -172,7 +143,15 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
 
+
+    <!-- Section Content -->
+    <section class="about-me-sum clearfix">
+        <div class="wbnrfz_eicw">
+            <div class="container container-mobile">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="row justify-content-center">
